1.20.2 /
[Alexandr Topilski]

1.20.1 / October 12, 2018
[Alexandr Topilski]
- Auto revert views after queries
- FastoViewer for values

1.20.0 / October 8, 2018
[Alexandr Topilski]
- Core module
- Design edit dialog
- Key view

1.19.3 / October 1, 2018
[Alexandr Topilski]
- [Redis] Commands 5.0 handling
- Fix is_dir function for Windows

1.19.2 / September 27, 2018
[Alexandr Topilski]
- [RocksDB] Update sources to version 5.16.0
- [LevelDB] Update sources to version 1.20
- [Memcached] Fix load database content

1.19.1 / September 19, 2018
[Alexandr Topilski]
- Support old Redis servers

1.19.0 / September 15, 2018
[Alexandr Topilski]
- Modules in PRO version

1.18.1 / September 15, 2018
[Alexandr Topilski]
- Send statistic

1.18.0 / September 15, 2018
[Alexandr Topilski]
- PRO version

1.17.10 / August 12, 2018
[Alexandr Topilski]
- Removed trial dialog

1.17.9 / August 9, 2018
[Alexandr Topilski]
- [RocksDB] Update sources to version 5.16.0
- Update QScintilla to version 2.10.7
- Update Snappy to version 1.1.7
- Update common to version 1.18.9
- Build strategy type
- Fix leveldb snappy issue

1.17.8 / August 5, 2018
[Alexandr Topilski]
- Save last login
- New credential dialog

1.17.7 / Jule 31, 2018
[Alexandr Topilski]
- Stabilization

1.17.6 / Jule 7, 2018
[Alexandr Topilski]
- [RocksDB] Update sources to version 5.14.0
- [LevelDB] Leveldb on windows not working #62
- Add key to branch

1.17.5 / May 23, 2018
[Alexandr Topilski]
- [LevelDB] Update sources to version 1.20
- [RocksDB] Update sources to version 5.13.0
- Update QScintilla to version 2.10.4
- Update libssh2 (ED25519 Key Support)

1.17.4 / April 20, 2018
[Alexandr Topilski]
- Delete key hotkey
- New port for auth

1.17.3 / April 15, 2018
[Alexandr Topilski]
- Added examples for main commands

1.17.2 / April 4, 2018
[Alexandr Topilski]
- JSONDUMP command for all databases
- Unicode view

1.17.1 / March 28, 2018
[Alexandr Topilski]
- Ban users

1.17.0 / March 27, 2018
[Alexandr Topilski]