@@ -37,11 +37,11 @@ enum OutputView {
   FROM_UNICODE_VIEW,
 
   MSGPACK_VIEW,  // from
-  ZLIB_VIEW,    // from
-  LZ4_VIEW,     // from
-  BZIP2_VIEW,   // from
-  SNAPPY_VIEW,  // from
-  XML_VIEW      // raw
+  ZLIB_VIEW,     // from
+  LZ4_VIEW,      // from
+  BZIP2_VIEW,    // from
+  SNAPPY_VIEW,   // from
+  XML_VIEW       // raw
 };
 
 extern const std::vector<const char*> g_output_views_text;
